--- a/package.json
+++ b/package.json
@@ -21,17 +21,22 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/bull": "^0.6.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/event-emitter": "^1.3.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^9.1.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/throttler": "^2.0.1",
     "@types/bcrypt": "^5.0.0",
     "@types/express-session": "^1.17.4",
     "bcrypt": "^5.0.1",
+    "bull": "^4.8.4",
+    "cache-manager": "^4.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "csurf": "^1.11.0",
@@ -51,6 +56,9 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bull": "^3.15.8",
+    "@types/cache-manager": "^4.0.1",
+    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/multer": "^1.4.7",
