--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -21,15 +21,18 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.8.1",
+    "@nestjs/axios": "^0.1.0",
     "@nestjs/bull": "^0.6.0",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^2.1.0",
-    "@nestjs/core": "^8.0.0",
+    "@nestjs/common": "8.4.7",
+    "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "8.4.7",
     "@nestjs/event-emitter": "^1.3.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/mongoose": "^9.1.1",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/mongoose": "^9.2.0",
+    "@nestjs/platform-express": "^8.4.7",
     "@nestjs/schedule": "^2.1.0",
+    "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/throttler": "^2.0.1",
     "@types/bcrypt": "^5.0.0",
@@ -42,9 +45,11 @@
     "csurf": "^1.11.0",
     "express-session": "^1.17.3",
     "helmet": "^5.1.0",
+    "joi": "^17.6.0",
     "mongoose": "^6.4.2",
     "mongoose-autopopulate": "^0.16.1",
     "mongoose-paginate-v2": "^1.7.0",
+    "object-transformer": "^0.0.5",
     "object.omit": "^3.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
